@@ -1,0 +1,226 @@
+#   Programmer:     limodou
+#   E-mail:         limodou@gmail.com
+#  
+#   Copyleft 2006 limodou
+#  
+#   Distributed under the terms of the GPL (GNU Public License)
+#  
+#   UliPad is free software; you can redistribute it and/or modify
+#   it under the terms of the GNU General Public License as published by
+#   the Free Software Foundation; either version 2 of the License, or
+#   (at your option) any later version.
+#
+#   This program is distributed in the hope that it will be useful,
+#   but WITHOUT ANY WARRANTY; without even the implied warranty of
+#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#   GNU General Public License for more details.
+#
+#   You should have received a copy of the GNU General Public License
+#   along with this program; if not, write to the Free Software
+#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#
+#   $Id$
+
+import LexerBase
+import re
+
+__all__ = ['STYLE_DEFAULT', 'STYLE_KEYWORD', 'STYLE_COMMENT',
+    'STYLE_INTEGER', 'STYLE_STRING', 'STYLE_CUSTOM', 
+    'PATTERN_NUMBER', 'PATTERN_INT', 'PATTERN_DOUBLE_STRING',
+    'PATTERN_SINGLE_STRING', 'PATTERN_STRING', 'PATTERN_IDEN',
+    'PATTERN_EMAIL', 'PATTERN_URL',
+    'CustomLexer']
+    
+STYLE_DEFAULT = 1
+STYLE_KEYWORD = 2
+STYLE_COMMENT = 3
+STYLE_INTEGER = 4
+STYLE_STRING = 5
+STYLE_CUSTOM = 20
+
+PATTERN_NUMBER = r'(\b|[+-]?)(\d+\.?\d*|\.\d+)([eE][+-]?\d+)?\b'
+PATTERN_INT = r'(\b|[+-])\d+\b'
+PATTERN_DOUBLE_STRING = r'"((?:\\.|[^"])*)?"'
+PATTERN_SINGLE_STRING = r"'((?:\\.|[^'])*)?'"
+PATTERN_STRING = r'"((?:\\.|[^"])*)?"|\'((?:\\.|[^\'])*)?\''
+PATTERN_IDEN = r'\b\w+\b'
+PATTERN_EMAIL = r'\b[\w\-_/]+@[\w\-_]+(\.[\w\-_]+)+\b'
+PATTERN_URL = r'\b(https?://|ftp://|file://|mailto:)\S+?(?=[^a-zA-Z/0-9.:=&\-%#?_])'
+
+class CustomLexer(LexerBase.LexerBase):
+    metaname = 'ncustom'
+    casesensitive = True
+    fulltext = False
+    
+    def loadDefaultKeywords(self):
+        return []
+    
+    def loadPreviewCode(self):
+        pass
+    
+    def pre_colourize(self, win):
+        pass
+    
+    def load(self):
+        super(CustomLexer, self).load()
+        if not self.casesensitive:
+            self.keywords = [x.lower() for x in self.keywords]
+        self.backstyles = self.initbackstyle()
+    
+    def initSyntaxItems(self):
+        self.addSyntaxItem('r_default', 'Default',  STYLE_DEFAULT,  self.STE_STYLE_TEXT)
+        self.addSyntaxItem('keyword',   'Keyword',  STYLE_KEYWORD,  self.STE_STYLE_KEYWORD1)
+        self.addSyntaxItem('comment',   'Comment',  STYLE_COMMENT,  self.STE_STYLE_COMMENT)
+        self.addSyntaxItem('integer',   'Integer',  STYLE_INTEGER,  self.STE_STYLE_NUMBER)
+        self.addSyntaxItem('string',    'String',   STYLE_STRING,   self.STE_STYLE_STRING)
+                                                                    
+        self.tokens = self._init_tokens([
+            (r'#(?=$)', STYLE_COMMENT),
+            (PATTERN_STRING, STYLE_STRING),
+            (PATTERN_NUMBER, STYLE_INTEGER),
+            (PATTERN_IDEN, self.is_keyword()),
+        ])
+        
+    def _init_tokens(self, tokens):
+        r = []
+        for p, s in tokens:
+            if isinstance(p, (str, unicode)):
+                p_r = re.compile(p, re.DOTALL)
+            else:
+                p_r = p
+            r.append((p_r, s))
+        return r
+        
+    def just_return(self, styles):
+        """
+        styls should be a tuple list, for example:
+            [(1, style1), (2, style2)] #(group, style)
+        """
+        def r(matchobj):
+            a = []
+            b = matchobj.start()
+            for group, style in styles:
+                try:
+                    span = matchobj.span(group)
+                    a.append((span[group]-b, span[group]-b, style))
+                except IndexError:
+                    continue
+            return a
+        return r
+    
+    def is_keyword(self, group=0):
+        def r(matchobj):
+            key = matchobj.group(group)
+            span = matchobj.span(group)
+            if not self.casesensitive:
+                key = key.lower()
+            if key in self.keywords:
+                b = matchobj.start()
+                return [(span[0]-b, span[1]-b, STYLE_KEYWORD)]
+            else:
+                return STYLE_DEFAULT
+        return r
+
+    def initbackstyle(self):
+        '''
+        The element should be (currentstyle, leadingstyle)
+        '''
+        return []
+    
+    def styletext(self, win):
+        begin = win.GetEndStyled()
+        
+        for i in xrange(begin, -1, -1):
+            style = win.GetStyleAt(i)
+            if style:
+                begin = i
+                break
+            
+        flag = False
+        cs, ls, match = None, None, None
+        for v in self.backstyles:
+            if len(v) == 2:
+                (cs, ls), match = v, None
+            else:
+                cs, ls, match = v
+            if cs == style:
+                flag = True
+                break
+        if flag:
+            for i in xrange(begin-1, -1, -1):
+                es = win.GetStyleAt(i)
+                if es == ls:
+                    if match:
+                        text = win.GetTextRange(i, begin).encode('utf-8')
+                        if isinstance(match, str):
+                            if text.startswith(match):
+                                begin = i
+                                break
+                        elif match.match(text):
+                            begin = i
+                            break
+                else:
+                    if not match:
+                        break
+            else:
+                begin = 0
+            return begin
+        else:
+            return None
+    
+    def styleneeded(self, win, pos):
+        begin = self.styletext(win)
+        if begin is not None:
+            text = win.GetTextRange(begin, pos).encode('utf-8')
+        else:
+            if self.fulltext:
+                text = win.getRawText()
+                begin = 0
+            else:
+                begin = win.PositionFromLine(win.LineFromPosition(win.GetEndStyled()))
+                text = win.GetTextRange(begin, pos).encode('utf-8')
+        if not text:
+            return
+        
+        i = 0
+        while begin + i < pos:
+            flag = False
+            for p, s in self.tokens:
+                r = p.match(text, i)
+                if r:
+                    flag = True
+                    step = r.end() - r.start()
+                    
+                    if not callable(s):
+                        a = [(0, step, s)]
+                    else:
+                        ret = s(r)
+                        if isinstance(ret, int):
+                            a = [(0, step, ret)]
+                        else:
+                            a = ret
+                    break
+                    
+            if not flag:
+                step = 1
+                a = [(0, step, STYLE_DEFAULT)]
+             
+            self.set_comp_style(win, begin+i, begin+i+step, a)
+            i += step
+            
+    def set_style(self, win, start, end, style):
+        win.StartStyling(start, 0xff)
+        win.SetStyling(end - start, style)
+        
+    def set_comp_style(self, win, begin, end, pos_array):
+        pos_array.sort(lambda (aStart, aEnd, aStyle), (bStart, bEnd, bStyle): cmp(aStart, bStart))
+        start = begin
+        styledEnd = begin
+        for (styledStart, styledEnd, style) in pos_array:
+            if styledStart + begin > start:
+                self.set_style(win, start, styledStart + begin, STYLE_DEFAULT)
+            self.set_style(win, styledStart + begin, styledEnd + begin, style)
+            start = styledEnd + begin + 1
+        
+        if styledEnd + begin < end:   
+            self.set_style(win, styledEnd + begin, end, STYLE_DEFAULT)         
